<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mint</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itinerary">Itinéraire</string>
    <string name="maps">Cartes</string>
    <string name="profile">Profil</string>
    <string name="title_activity_homepage">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start_point">Point de départ</string>
    <string name="end_point">Point d\'arrivée</string>
    <string name="step_point">Etape du trajet</string>
    <string-array name="map_array">
        <item>Routes</item>
        <item>Transports en commun</item>
        <item>Pollution</item>
    </string-array>
    <string name="enter_address">Entrer une nouvelle adresse</string>
    <string name="favorite_addresses_button"><u>Mes adresses favorites</u></string>
    <string name="favorite_transportation_button"><u>Mes modes de transport favoris</u></string>
    <string name="sensibility_button"><u>Sensibilité aux polluants</u></string>
    <string name="add">ajouter</string>
    <string name="sensibility_pollen_button"><u>Sensibilité aux pollens</u></string>
    <string name="address1">première adresse favorite</string>
    <string name="address2">deuxième adresse favorite</string>
    <string name="address3">troisième adresse favorite</string>
    <string name="address4">quatrième adresse favorite</string>
    <string name="address5">cinquième adresse favorite</string>
    <string name="very_high_sensibility">Très élevée</string>
    <string name="high_sensibility">Élevée</string>
    <string name="moderate_sensibility">Modérée</string>
    <string name="low_sensibility">Faible</string>
    <string name="no_sensibility">Pas de sensibilité</string>
    <string name="message_sensibility">Sélectionnez votre niveau de sensibilité à la pollution</string>
    <string name="message_sensibility_pollen">Sélectionnez votre niveau de sensibilité aux pollens</string>
    <string name="graph_week">graph_week</string>
    <string name="max_value_exposure">312</string>
    <string name="graph_pie">graph_pie</string>
    <string name="exposure_last_travel_text">Mon exposition aujourd\'hui</string>
    <string name="param_button"><u>Paramètres</u></string>
    <string name="user_image">user_image</string>
    <string name="app_logo">logo</string>
    <string name="set_sensibility">-</string>
    <string name="low_sensibility_pollen">Peu sensible</string>
    <string name="high_sensibility_pollen">Sensible</string>
    <string name="very_high_sensibility_pollen">Très sensible</string>
    <string name="no_sensibility_pollen">Pas sensible</string>
    <string name="user_name">"Mon Profil"</string>
    <string name="favorite_transportation_message">Sélectionnez vos modes de transports favoris</string>
    <string name="walk_button">walk_button</string>
    <string name="bike_button">bike_button</string>
    <string name="tram_button">tram_button</string>
    <string name="car_button">car_button</string>
    <string name="position_request"><u>Ma position</u></string>
    <string name="remove">remove</string>
    <string name="icon">icon</string>
    <string name="option_transportation_prompt">Mode de transport</string>
    <string name="option_departure_prompt">Départ</string>
    <string name="calendar_date_hint"><u>01/01/2020</u></string>
    <string name="search_button">Rechercher</string>
    <string name="button_search">Rechercher</string>
    <string name="text_options">Options</string>
    <string name="description_logo">Logo Mint : Deux feuilles de menthe vertes parcourues par des flèches</string>
    <string name="default_time">00:00</string>
    <string name="time_prompt">Heure</string>
    <string name="date_prompt">Date</string>
    <string name="waiting_message">Calcul itinéraire en cours</string>
    <string name="itinerary_end_message">Calcul terminé</string>
    <string name="itinerary_step">Etapes itinéraire</string>
    <string name="error404">Erreur 404 : page non trouvée</string>
    <string name="connection_success">CONNEXION SUCCESS</string>
    <string name="error_url_format">erreur : URL incorrecte</string>
    <string name="connection_failed">erreur de connexion</string>
    <string name="itinerary_point1">"Point de départ </string>
    <string name="itinerary_point2">Point d\'arrivée </string>
    <string name="button_options_start">de départ</string>
    <string name="button_options_end">d\'arrivée</string>
    <string name="position_text">Ma position</string>
    <string name="recap_title">Itinéraires</string>
    <string name="default_exposition">--</string>
    <string name="itinerary_exposition">Exposition :</string>
    <string name="itinerary_default_time">duration</string>
    <string name="exposition_unit">µg/m³</string>
    <string name="settings_faq">F.A.Q.</string>
    <string name="settings_language">Langue</string>
    <string name="settings_legal">Mentions légales</string>
    <string name="settings_police">Agrandir la police</string>
    <string name="settings_dark_mode">Mode nuit</string>
    <string name="settings_big_mode">Aggrandissement</string>
    <string name="mon_exposition">Mon exposition</string>
    <string name="_0h_08min">0h 08min</string>
    <string name="criteria_choice">Choix du critère</string>
    <string name="fastest">Plus rapide</string>
    <string name="healthier">Plus sain</string>
    <string name="car_choice">1</string>
    <string name="tram_choice">2</string>
    <string name="bike_choice">3</string>
    <string name="walk_choice">4</string>
    <string name="calendar">Calendrier</string>
    <string name="mint_logo">Mint_logo</string>
    <string name="ma_position">ma position</string>
    <string name="terms_of_use">Conditions d\'utilisation</string>
    <string name="mentions_l_gales">Mentions légales</string>
</resources>