<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.SettingsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/mint_icon" />

    <View
        android:id="@+id/settings_separator_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:background="@color/LightLightGrey_Settings" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/settings_separator_2"
        android:layout_below="@id/settings_separator_1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:contentDescription="Right chevron"
        android:src="@drawable/ic_chevron_right" />

    <Button
        android:id="@+id/faq"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/settings_separator_1"
        android:layout_marginTop="1dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="onClickFAQ"
        android:paddingLeft="30dp"
        android:text="@string/settings_faq"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <View
        android:id="@+id/settings_separator_2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/faq"
        android:background="@color/LightLightGrey_Settings" />

    <TextView
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/settings_separator_2"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/settings_language"
        android:textColor="@color/colorBlack"
        android:textSize="30sp" />

    <View
        android:id="@+id/settings_separator_3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/language"
        android:background="@color/LightLightGrey_Settings" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/settings_separator_4"
        android:layout_below="@id/settings_separator_3"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_chevron_right" />

    <TextView
        android:id="@+id/terms_of_use_text"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/settings_separator_3"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="onClickTermsOfUse"
        android:paddingLeft="30dp"
        android:text="@string/terms_of_use"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"/>

    <View
        android:id="@+id/settings_separator_4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/LightLightGrey_Settings"
        android:layout_below="@id/terms_of_use_text"/>

    <TextView
        android:id="@+id/legal_notices_text"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/settings_separator_4"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:onClick="onClickLegalNotices"
        android:paddingLeft="30dp"
        android:text="@string/mentions_l_gales"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/settings_separator_5"
        android:layout_below="@id/settings_separator_4"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_chevron_right" />

    <View
        android:id="@+id/settings_separator_5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/legal_notices_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@color/LightLightGrey_Settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/settings_separator_6"
        android:layout_below="@id/settings_separator_5"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:id="@+id/dark_mode"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/settings_separator_5"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:text="@string/settings_dark_mode"
        android:textSize="30sp"
        android:textColor="@color/colorBlack"/>

    <View
        android:id="@+id/settings_separator_6"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/dark_mode"
        android:background="@color/LightLightGrey_Settings" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/White_Settings"
        android:fontFamily="@font/quicksand_regular"
        app:itemTextColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_menu"
        tools:ignore="MissingConstraints" />

</RelativeLayout>